# datavis-rs

./: Cargo.toml  LICENSE  README.md  TESTING.md  build.rs
.github/workflows/: ci.yml  release.yml  test.yml
assets/icons/: icon.icns
benches/: data_processing.rs
examples/: analyze_dwarf.rs  sample_config.toml
locales/: en.yaml  zh-CN.yaml
proptest-regressions/frontend/: plot.txt
src/: app.rs  error.rs  i18n.rs  lib.rs  main.rs  types.rs
src/analysis/: fft.rs  mod.rs
src/backend/: converter_engine.rs  dwarf_parser.rs  elf_parser.rs  mock_fault.rs  mock_probe.rs  mod.rs  probe.rs  probe_trait.rs  read_manager.rs  type_table.rs  worker.rs
src/backend/openocd/: chip_map.rs  mod.rs  probe.rs  process.rs  tcl_client.rs
src/config/: mod.rs  settings.rs  ui_session.rs
src/frontend/: dialog_manager.rs  icons.rs  markers.rs  mod.rs  pane_registry.rs  pane_trait.rs  panels.rs  plot.rs  script_editor.rs  state.rs  status_bar.rs  toolbar.rs  topics.rs  widgets.rs
src/frontend/actions/: mod.rs  variable_actions.rs
src/frontend/dialogs/: collection_settings.rs  connection_settings.rs  converter_editor.rs  duplicate_confirm.rs  elf_symbols.rs  export_config.rs  mod.rs  persistence_settings.rs  preferences.rs  trigger_config.rs  value_editor.rs  variable_change.rs  variable_detail.rs
src/frontend/pages/: mod.rs  settings.rs  variables.rs  visualizer.rs
src/frontend/panes/: exporter.rs  fft_view.rs  mod.rs  pipeline_editor.rs  recorder.rs  settings.rs  time_series.rs  variable_browser.rs  variable_list.rs  watcher.rs
src/frontend/workspace/: default_layout.rs  mod.rs  tab_viewer.rs
src/menu/: builder.rs  events.rs  ids.rs  mod.rs
src/pipeline/: bridge.rs  compiled_plan.rs  compiler.rs  error.rs  executor.rs  id.rs  mod.rs  node.rs  node_type.rs  packet.rs  port.rs  variable_tree.rs
src/pipeline/nodes/: exporter_sink.rs  filter.rs  graph_sink.rs  mod.rs  probe_source.rs  recorder_sink.rs  rhai_script.rs  script_transform.rs  ui_broadcast_sink.rs  ui_sink.rs
src/scripting/: engine.rs  mod.rs
src/session/: mod.rs  player.rs  recorder.rs  types.rs
tests/: backend_lifecycle_integration.rs  elf_parsing_integration.rs  fault_injection_integration.rs  frontend_state_test.rs  infrastructure_test.rs  variable_workflow_integration.rs
tests/common/: builders.rs  fault_helpers.rs  mock_helpers.rs  mod.rs
tests/fixtures/: Makefile  README.md  link.ld  test_arm.elf  test_complex_c.elf  test_complex_c_source.c  test_cpp.elf  test_cpp_simple.cpp  test_cpp_source.cpp  test_pointer.elf  test_pointer_source.c  test_rust_source.rs  test_source.c  test_struct.elf  test_struct_source.c
tests/fixtures/rust_embedded/: Cargo.toml
tests/fixtures/rust_embedded/.cargo/: config.toml
