[package]
name = "datavis-rs"
version = "0.1.0"
edition = "2021"
authors = ["hxyulin <hxyulin@proton.me>"]
description = "SWD-based data visualizer with live variable observation"
license = "MIT"
repository = "https://github.com/hxyulin/datavis-rs"

[dependencies]
# UI Framework
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.31"
egui_plot = "0.31"

# SWD/Debug Probe Interface
probe-rs = "0.25"

# Scripting Engine for Variable Converters
rhai = { version = "1.20", features = ["sync"] }

# Thread Communication
crossbeam-channel = "0.5"

# Serialization for configs and persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Time utilities
chrono = "0.4"

# Directory paths
dirs-next = "2.0"

# Native file dialogs
rfd = "0.15"

# Async runtime for probe-rs operations
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }

# ELF parsing and DWARF debug info
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
gimli = { version = "0.31", default-features = false, features = ["read", "std"] }

# C++ symbol demangling
cpp_demangle = "0.4"
rustc-demangle = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "data_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
mock-probe = []  # For testing without real hardware
