[package]
name = "datavis-rs"
version = "0.1.0"
edition = "2021"
authors = ["hxyulin <hxyulin@proton.me>"]
description = "SWD-based data visualizer with live variable observation"
license = "MIT"
repository = "https://github.com/hxyulin/datavis-rs"

[package.metadata.packager]
product_name = "Data Visualizer"
identifier = "dev.hxyulin.datavis"
version = "0.1.0-alpha.1"
before-packaging-command = "cargo build --release"
icons = [
    "assets/icons/icon.icns",
    "assets/icons/icon.ico",
    "assets/icons/png/icon-16x16.png",
    "assets/icons/png/icon-32x32.png",
    "assets/icons/png/icon-48x48.png",
    "assets/icons/png/icon-64x64.png",
    "assets/icons/png/icon-128x128.png",
    "assets/icons/png/icon-256x256.png",
    "assets/icons/png/icon-512x512.png",
    "assets/icons/png/icon-1024x1024.png",
]

[package.metadata.packager.macos]
signing_identity = "-"
entitlements = "assets/Entitlements.plist"

[package.metadata.packager.windows]

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
] }
egui = "0.33"
egui_dock = { version = "0.18", features = ["serde"] }
egui_plot = "0.34"

# SWD/Debug Probe Interface
probe-rs = "0.30"

# Scripting Engine for Variable Converters
rhai = { version = "1.23", features = ["sync"] }

# Thread Communication
crossbeam-channel = "0.5"

# Serialization for configs and persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# FFT for frequency analysis
rustfft = "6.2"

# Directory paths
dirs-next = "2.0"

# Native file dialogs
rfd = "0.15"

# Native OS menus
muda = "0.17"
raw-window-handle = "0.6"

# Internationalization
rust-i18n = "3"

# Async runtime for probe-rs operations
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }

# ELF parsing and DWARF debug info
object = { version = "0.38", default-features = false, features = [
    "read",
    "elf",
    "std",
] }
gimli = { version = "0.32", default-features = false, features = [
    "read",
    "std",
] }

# C++ symbol demangling
cpp_demangle = "0.4"
rustc-demangle = "0.1"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"           # Trait mocking
proptest = "1.5"            # Property-based testing
tempfile = "3.10"           # Temporary files for parsers
serial_test = "3.1"         # Sequential test execution

[[bench]]
name = "data_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
mock-probe = [] # For testing without real hardware
